fix bugs 新增倒计时忽略节假日/周末功能

--- a/lesson_table/config.json
+++ b/lesson_table/config.json
@@ -604,7 +604,7 @@
         {}
     ],
     "event": {
-        "生地中考": 1719676800,
-        "aaa": 1729676800
+        "生地中考": [1719676800,true,true],
+        "aaa": [1729676800,false,false]
     }
 }
