新增调课功能

--- a/lesson_table/config.json
+++ b/lesson_table/config.json
@@ -39,6 +39,7 @@
         "7": "7",
         "8": "8",
         "9": "9",
+        "DK":"调",
         "Mon.": "星期一",
         "Tue.": "星期二",
         "Wed.": "星期三",
@@ -606,5 +607,8 @@
     "event": {
         "生地中考": [1719676800,true,true],
         "aaa": [1729676800,false,false]
-    }
+    },
+    "temporary_transfer_of_lesson":[
+        [1711296000,"morning",0,"DK","E"]
+    ]
 }
