--- a/lesson_table/config.json
+++ b/lesson_table/config.json
@@ -7,7 +7,7 @@
         28
     ],
     "title": "每日课表",
-    "font": "SimHei.ttf",
+    "font": "SourceHanSansCN-Normal.otf",
     "lang": {
         "C": "语文",
         "E": "英语",
