--- a/lesson_table/config.json
+++ b/lesson_table/config.json
@@ -8,38 +8,7 @@
     ],
     "title": "每日课表",
     "font": "SourceHanSansCN-Normal.otf",
-    "lang": {
-        "C": "语文",
-        "E": "英语",
-        "M": "数学",
-        "H": "历史",
-        "G": "地理",
-        "P": "政治",
-        "B": "生物",
-        "PH": "物理",
-        "PE": "体育",
-        "PS": "心理",
-        "CM": "班会",
-        "MU": "音乐",
-        "I": "信息技术",
-        "A": "美术",
-        "R": "读",
-        "N": "晚",
-        "!": "!",
-        "FJ": "芜湖!放假!",
-        "morning": "上午",
-        "afternoon": "下午",
-        "evening": "晚修",
-        "1": "1",
-        "2": "2",
-        "3": "3",
-        "4": "4",
-        "5": "5",
-        "6": "6",
-        "7": "7",
-        "8": "8",
-        "9": "9",
-        "DK":"调",
+    "format": {
         "Mon.": "星期一",
         "Tue.": "星期二",
         "Wed.": "星期三",
@@ -52,13 +21,13 @@
         "show_event_2": "[%s天]"
     },
     "parts_in_order": [
-        "morning",
-        "afternoon",
-        "evening"
+        "上午",
+        "下午",
+        "晚修"
     ],
     "lesson_table": [
         {
-            "morning": [
+            "上午": [
                 [
                     0,
                     44000
@@ -66,41 +35,41 @@
                 [
                     25200,
                     28200,
-                    "R",
-                    "C"
+                    "读",
+                    "语文"
                 ],
                 [
                     28800,
                     31200,
                     "1",
-                    "C"
+                    "语文"
                 ],
                 [
                     31800,
                     34200,
                     "2",
-                    "M"
+                    "数学"
                 ],
                 [
                     34800,
                     37200,
                     "3",
-                    "PE"
+                    "体育"
                 ],
                 [
                     37800,
                     40200,
                     "4",
-                    "H"
+                    "历史"
                 ],
                 [
                     40800,
                     43200,
                     "5",
-                    "E"
+                    "英语"
                 ]
             ],
-            "afternoon": [
+            "下午": [
                 [
                     0,
                     80000
@@ -108,35 +77,35 @@
                 [
                     50400,
                     51600,
-                    "R",
-                    "B"
+                    "读",
+                    "生物"
                 ],
                 [
                     51600,
                     54000,
                     "6",
-                    "G"
+                    "地理"
                 ],
                 [
                     54600,
                     57000,
                     "7",
-                    "B"
+                    "生物"
                 ],
                 [
                     57900,
                     60300,
                     "8",
-                    "E"
+                    "英语"
                 ],
                 [
                     60900,
                     63000,
                     "9",
-                    "C"
+                    "语文"
                 ]
             ],
-            "evening": [
+            "晚修": [
                 [
                     50000,
                     80000
@@ -144,31 +113,31 @@
                 [
                     67200,
                     69600,
-                    "N",
-                    "E"
+                    "晚",
+                    "英语"
                 ],
                 [
                     69600,
                     72000,
-                    "N",
-                    "M"
+                    "晚",
+                    "数学"
                 ],
                 [
                     72600,
                     75000,
-                    "N",
-                    "PH"
+                    "晚",
+                    "物理"
                 ],
                 [
                     75000,
                     76800,
-                    "N",
-                    "C"
+                    "晚",
+                    "语文"
                 ]
             ]
         },
         {
-            "morning": [
+            "上午": [
                 [
                     0,
                     44000
@@ -176,41 +145,41 @@
                 [
                     25200,
                     28200,
-                    "R",
-                    "E"
+                    "读",
+                    "英语"
                 ],
                 [
                     28800,
                     31200,
                     "1",
-                    "E"
+                    "英语"
                 ],
                 [
                     31800,
                     34200,
                     "2",
-                    "M"
+                    "数学"
                 ],
                 [
                     34800,
                     37200,
                     "3",
-                    "C"
+                    "语文"
                 ],
                 [
                     37800,
                     40200,
                     "4",
-                    "P"
+                    "政治"
                 ],
                 [
                     40800,
                     43200,
                     "5",
-                    "PE"
+                    "体育"
                 ]
             ],
-            "afternoon": [
+            "下午": [
                 [
                     0,
                     80000
@@ -218,35 +187,35 @@
                 [
                     50400,
                     51600,
-                    "R",
-                    "G"
+                    "读",
+                    "地理"
                 ],
                 [
                     51600,
                     54000,
                     "6",
-                    "PH"
+                    "物理"
                 ],
                 [
                     54600,
                     57000,
                     "7",
-                    "C"
+                    "语文"
                 ],
                 [
                     57900,
                     60300,
                     "8",
-                    "CM"
+                    "班会"
                 ],
                 [
                     60900,
                     63000,
                     "9",
-                    "P"
+                    "政治"
                 ]
             ],
-            "evening": [
+            "晚修": [
                 [
                     50000,
                     80000
@@ -254,31 +223,31 @@
                 [
                     67200,
                     69600,
-                    "N",
-                    "E"
+                    "晚",
+                    "英语"
                 ],
                 [
                     69600,
                     72000,
-                    "N",
-                    "M"
+                    "晚",
+                    "数学"
                 ],
                 [
                     72600,
                     75000,
-                    "N",
-                    "PH"
+                    "晚",
+                    "物理"
                 ],
                 [
                     75000,
                     76800,
-                    "N",
-                    "C"
+                    "晚",
+                    "语文"
                 ]
             ]
         },
         {
-            "morning": [
+            "上午": [
                 [
                     0,
                     44000
@@ -286,41 +255,41 @@
                 [
                     25200,
                     28200,
-                    "R",
-                    "C"
+                    "读",
+                    "语文"
                 ],
                 [
                     28800,
                     31200,
                     "1",
-                    "PH"
+                    "物理"
                 ],
                 [
                     31800,
                     34200,
                     "2",
-                    "C"
+                    "语文"
                 ],
                 [
                     34800,
                     37200,
                     "3",
-                    "MU"
+                    "音乐"
                 ],
                 [
                     37800,
                     40200,
                     "4",
-                    "E"
+                    "英语"
                 ],
                 [
                     40800,
                     43200,
                     "5",
-                    "G"
+                    "地理"
                 ]
             ],
-            "afternoon": [
+            "下午": [
                 [
                     0,
                     80000
@@ -328,26 +297,26 @@
                 [
                     50400,
                     51600,
-                    "R",
-                    "P"
+                    "读",
+                    "政治"
                 ],
                 [
                     51600,
                     54000,
                     "6",
-                    "P"
+                    "政治"
                 ],
                 [
                     54600,
                     57000,
                     "7",
-                    "M"
+                    "数学"
                 ],
                 [
                     57900,
                     60300,
                     "8",
-                    "B"
+                    "生物"
                 ],
                 [
                     60900,
@@ -356,7 +325,7 @@
                     "B|G"
                 ]
             ],
-            "evening": [
+            "晚修": [
                 [
                     50000,
                     80000
@@ -364,31 +333,31 @@
                 [
                     67200,
                     69600,
-                    "N",
-                    "E"
+                    "晚",
+                    "英语"
                 ],
                 [
                     69600,
                     72000,
-                    "N",
-                    "M"
+                    "晚",
+                    "数学"
                 ],
                 [
                     72600,
                     75000,
-                    "N",
-                    "PH"
+                    "晚",
+                    "物理"
                 ],
                 [
                     75000,
                     76800,
-                    "N",
-                    "C"
+                    "晚",
+                    "语文"
                 ]
             ]
         },
         {
-            "morning": [
+            "上午": [
                 [
                     0,
                     44000
@@ -396,41 +365,41 @@
                 [
                     25200,
                     28200,
-                    "R",
-                    "E"
+                    "读",
+                    "英语"
                 ],
                 [
                     28800,
                     31200,
                     "1",
-                    "B"
+                    "生物"
                 ],
                 [
                     31800,
                     34200,
                     "2",
-                    "E"
+                    "英语"
                 ],
                 [
                     34800,
                     37200,
                     "3",
-                    "C"
+                    "语文"
                 ],
                 [
                     37800,
                     40200,
                     "4",
-                    "PH"
+                    "物理"
                 ],
                 [
                     40800,
                     43200,
                     "5",
-                    "I"
+                    "信息技术"
                 ]
             ],
-            "afternoon": [
+            "下午": [
                 [
                     0,
                     80000
@@ -438,35 +407,35 @@
                 [
                     50400,
                     51600,
-                    "R",
-                    "B"
+                    "读",
+                    "生物"
                 ],
                 [
                     51600,
                     54000,
                     "6",
-                    "G"
+                    "地理"
                 ],
                 [
                     54600,
                     57000,
                     "7",
-                    "M"
+                    "数学"
                 ],
                 [
                     57900,
                     60300,
                     "8",
-                    "A"
+                    "美术"
                 ],
                 [
                     60900,
                     63000,
                     "9",
-                    "M"
+                    "数学"
                 ]
             ],
-            "evening": [
+            "晚修": [
                 [
                     50000,
                     80000
@@ -474,31 +443,31 @@
                 [
                     67200,
                     69600,
-                    "N",
-                    "E"
+                    "晚",
+                    "英语"
                 ],
                 [
                     69600,
                     72000,
-                    "N",
-                    "M"
+                    "晚",
+                    "数学"
                 ],
                 [
                     72600,
                     75000,
-                    "N",
-                    "PH"
+                    "晚",
+                    "物理"
                 ],
                 [
                     75000,
                     76800,
-                    "N",
-                    "C"
+                    "晚",
+                    "语文"
                 ]
             ]
         },
         {
-            "morning": [
+            "上午": [
                 [
                     0,
                     44000
@@ -506,41 +475,41 @@
                 [
                     25200,
                     28200,
-                    "R",
-                    "C"
+                    "读",
+                    "语文"
                 ],
                 [
                     28800,
                     31200,
                     "1",
-                    "C"
+                    "语文"
                 ],
                 [
                     31800,
                     34200,
                     "2",
-                    "M"
+                    "数学"
                 ],
                 [
                     34800,
                     37200,
                     "3",
-                    "PH"
+                    "物理"
                 ],
                 [
                     37800,
                     40200,
                     "4",
-                    "H"
+                    "历史"
                 ],
                 [
                     40800,
                     43200,
                     "5",
-                    "E"
+                    "英语"
                 ]
             ],
-            "afternoon": [
+            "下午": [
                 [
                     0,
                     80000
@@ -548,8 +517,8 @@
                 [
                     50400,
                     51600,
-                    "R",
-                    "G"
+                    "读",
+                    "地理"
                 ],
                 [
                     51600,
@@ -561,22 +530,22 @@
                     54600,
                     57000,
                     "7",
-                    "M"
+                    "数学"
                 ],
                 [
                     57900,
                     60300,
                     "8",
-                    "PE"
+                    "体育"
                 ],
                 [
                     60900,
                     63000,
                     "9",
-                    "H"
+                    "历史"
                 ]
             ],
-            "evening": [
+            "晚修": [
                 [
                     50000,
                     80000
@@ -584,20 +553,20 @@
                 [
                     64800,
                     68400,
-                    "N",
+                    "晚",
                     "B|G"
                 ],
                 [
                     69000,
                     72000,
-                    "N",
+                    "晚",
                     "B|G"
                 ],
                 [
                     72000,
                     73000,
                     "!",
-                    "FJ"
+                    "放假！"
                 ]
             ]
         },
@@ -609,6 +578,6 @@
         "aaa": [1729676800,false,false]
     },
     "temporary_transfer_of_lesson":[
-        [1711296000,"morning",0,"DK","E"]
+        [1711296000,"上午",0,"调课","英语"]
     ]
 }
